--- a/src/style.css
+++ b/src/style.css
@@ -18,11 +18,25 @@
   padding: 0;
 }
 
+body {
+  user-select: none;
+}
 
-h2, h5, p, ul, li, a, span, input, textarea, label, summary, details, .article-content {
+
+h2, h5,ul, li, a, span, input, textarea, label, summary, details, .article-content {
   font-family: 'Montserrat', monospace;
 }
 
-h1, h3, h4 {
+h1, h3, h4, p {
   font-family: 'Signika Negative', sans-serif;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+}
+
+p {
+  font-size: 1.4rem;
 }
